# BidWise

./: .gitignore  .graphifyignore  .prettierignore  AGENTS.md  CLAUDE.md  ato.yaml  ato.yaml.example  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  review-findings-cycle-2.md  review-findings-cycle-3.md  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
.serena/: project.yml
_bmad-output/brainstorming/: brainstorming-session-2026-03-16-1200.md
_bmad-output/implementation-artifacts/: 1-4-ui-framework-design-system.md  1-9-command-palette.md  11-1-enabler-stable-id-refactor-validation-report.md  (+120 more)
docs/: master-control-bounded-autonomy-architecture.md  master-control-watchdog-sentinel-design.md  parallel-dev-workflow.md  pre_sales_proposal_system_design.md  reference-autoresearch.md  reference-openclaw.md  reference-proposal-sop.md
playwright-report/: index.html
python/: pyproject.toml  requirements.txt
python/src/docx_renderer/: __main__.py  app.py
python/src/docx_renderer/engine/: figure_numbering.py  renderer.py
python/src/docx_renderer/models/: schemas.py
python/src/docx_renderer/routes/: health.py  render.py  shutdown.py
python/tests/: conftest.py  test_engine.py  test_figure_numbering.py  test_health.py  test_performance.py  test_render.py  test_shutdown.py
python/tests/fixtures/: sample.md  template.docx
scripts/: cold-start-check.mjs  mc-observe.sh  pipeline.sh  python-setup.sh  setup-ai-config.mjs  verify-structure.mjs  worktree.sh
(+962 files in other folders)
