[project]
name = "bidwise-docx-renderer"
version = "0.1.0"
description = "BidWise docx rendering engine"
requires-python = ">=3.12"
dependencies = [
  "python-docx>=1.2.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
bidwise-docx = "docx_renderer.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
